--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Imagine</a>
+      <img src="images/logo-transparent-white.png" id="logo" alt="Galerie Imagine" href="index.html">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,14 +57,9 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<!-- Les choses sérieuses commencent ici -->
-<div id="page">
-  <div id="head">
-    <img src="images/logo.png" id="logo" alt="Galerie Imagine" width="200px">
-  </div>
-
 <!-- Le haut de la page-->
 <div id="wrapper">
+  <div class="spacermiddle"></div> 
   <h1>GRAND TITRE</h1>
   <h2>petit titre</h2>
   <div class="spacersmall"></div> 
