--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
       </button>
       <img src="images/logo-transparent-white.png" id="logo" alt="Galerie Imagine" href="index.html">
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    
       <ul class="nav navbar-nav navbar-right">
+
+
+        <li><a href="#ancre1">Commander</a></li>
+        <li><a href="contact.html">Nos réalisations</a></li>
+        <li><a href="contact.html">Le blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Commander <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suivez-nous ! <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://www.instagram.com/marlene_mrr/">Instagram</a></li>
+            <li><a href="https://www.facebook.com/marlene.crunch">Facebook</a></li>
+            <li><a href="https://twitter.com/mrlnmoreira">Twitter</a></li>
           </ul>
         </li>
       </ul>
@@ -66,9 +67,10 @@
   <button type="button" class="btn btn-default">Call to action</button>
 </div>
 
-<div class="spacersmall"></div> 
+<div id="ancre1" class="spacermiddle"></div> 
 
 <!-- Mon offre -->
+<div align="center"> <p><b> Comment faire ? </b></p> </div>
 <div class="container text-center"> 
   <div class="row">
     <div class="col-xs-4 feature">
