cala-to-action du frapper + bouton "commander"

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 <!-- Le haut de la page-->
 <div id="wrapper">
-  <div class="spacermiddle"></div> 
+  <div class="spacerbig"></div> 
   <h1>GRAND TITRE</h1>
   <h2>petit titre</h2>
   <div class="spacersmall"></div> 
-  <button type="button" class="btn btn-default">Call to action</button>
+  <button type="button" onclick="self.location='#ancre1'" class="btn btn-default">Commander</button>
 </div>
 
 <div id="ancre1" class="spacermiddle"></div> 
@@ -89,6 +89,8 @@
       <p> Blablabla blablab ablbala blablab ablblablabla blablabl ablbalbla blbalblablabla blabla blaba blabalb ablabblala bbalbalbla nlabla bla. </p> 
     </div>
   </div>
+    <div class="spacersmall"></div> 
+    <button type="button" onclick="self.location='https://marlene68.typeform.com/to/xNoXhg'" class="btn btn-default">Commander</button>
 </div>
 
 <div class="spacersmall"></div> 
