navbar page contact

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>IMAGINE - Votre montage photo sur-mesure en 24H </title>
         <meta name="Blabla" content="Blablbala blabla blablabla">
 
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
@@ -39,12 +38,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-
-
         <li><a href="#ancre1">Commander</a></li>
-        <li><a href="contact.html">Nos réalisations</a></li>
-        <li><a href="contact.html">Le blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Nos réalisations</a></li>
+        <li><a href="#">Le blog</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suivez-nous ! <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -98,9 +95,8 @@
 <!-- Les photos des travaux récents -->
 <div id="intro">
     <h2> Galerie photo </h2>
-    <p> Et blablabla et on va ajouter un lien hypertexte pour voir <a href="https://fr.wikipedia.org/wiki/%C3%89pice"> Wikipédia</a>.</p> 
+    <p> Retrouvez toutes nos réalisations <a href="pages/nos-realisations"> ici</a>.</p> 
 </div>
-
 <div id="realisations" align="center">
     <img src="images/work/marilyn01.jpg" class="pictures">
     <img src="images/work/beattles01.jpg" class="pictures">
@@ -131,7 +127,6 @@
       </div>
 
       <div class="col-xs-6 col-md-3"> 
-        <p> Site fictif créé grâce au programme Le Wagon </p>
       </div>
 
     </div>
