--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#ancre1">Commander</a></li>
-        <li><a href="#">Nos réalisations</a></li>
-        <li><a href="#">Le blog</a></li>
+        <li><a href="pages/nos-realisations.html">Nos réalisations</a></li>
+        <li><a href="pages/le-blog.html">Le blog</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suivez-nous ! <span class="caret"></span></a>
