--- a/pages/nos-realisations.html
+++ b/pages/nos-realisations.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
- <img src="../images/logo-transparent-white.png" id="logo" alt="Galerie Imagine" href="../index.html">
+<a href="../index.html"><img src="../images/logo-transparent-white.png" id="logo" alt="Galerie Imagine" href="index.html"></a>
     </div>
 
 <!-- Collect the nav links, forms, and other content for toggling -->
